ligolang/src/test/contracts/negative/deep_pattern_matching/pm_fail14.mligo
let main (_ : unit * unit) : operation list * unit =
  let () = 42n in
  (([] : operation list), ())
